新增景区删除功能

--- a/src/main/webapp/WEB-INF/templates/admin/scenic/scenic_edit.html
+++ b/src/main/webapp/WEB-INF/templates/admin/scenic/scenic_edit.html
@@ -228,7 +228,7 @@
                         <div class="box-header with-border">
                             <h3 class="box-title">编辑景区</h3>
                         </div>
-                        <form role="form" th:action="@{/admin/scenic/add.action}" method="post"
+                        <form role="form" th:action="@{/admin/scenic/edit.action}" method="post"
                               enctype="multipart/form-data">
                             <div class="box-body">
                                 <div th:if="${error}" class="alert alert-danger alert-dismissible">
@@ -353,7 +353,7 @@
                                 </div>
                             </div>
                             <div class="box-footer">
-                                <input type="submit" class="btn btn-primary" value="添加">
+                                <input type="submit" class="btn btn-primary" value="修改">
                             </div>
                         </form>
                     </div>
