--- a/src/main/webapp/WEB-INF/templates/home/contact.html
+++ b/src/main/webapp/WEB-INF/templates/home/contact.html
@@ -132,6 +132,11 @@
         </div>
     </div>
 </div>
+<div class="footer" style="margin-top: 10px; background:white;">
+    <p style="text-align:center;">
+        <a href="https://beian.miit.gov.cn" style="color: #000" target="_blank">蜀ICP备2021022255号-2</a>
+    </p>
+</div>
 <script src="/static/base/js/script.js"></script>
 </body>
 
