--- a/src/main/webapp/WEB-INF/templates/home/travel_info.html
+++ b/src/main/webapp/WEB-INF/templates/home/travel_info.html
@@ -116,6 +116,11 @@
         </div>
     </div>
 </div>
+<div class="footer" style="margin-top: 10px; background:white;">
+    <p style="text-align:center;">
+        <a href="https://beian.miit.gov.cn" target="_blank"  style="color: #000">蜀ICP备2021022255号-2</a>
+    </p>
+</div>
 <script src="/static/base/js/script.js"></script>
 <script th:src="@{/static/layer/layer.js}"></script>
 <script>
@@ -144,6 +149,7 @@
             })
         });
     });
+
 
 </script>
 </body>
