--- a/src/main/webapp/WEB-INF/templates/register.html
+++ b/src/main/webapp/WEB-INF/templates/register.html
@@ -75,5 +75,10 @@
     </div>
   </div>
   <!--内容-->
+  <div class="footer" style="margin-top: 10px; background:white;">
+    <p style="text-align:center;">
+      <a href="https://beian.miit.gov.cn" style="color: #000" target="_blank">蜀ICP备2021022255号-2</a>
+    </p>
+  </div>
 </body>
 </html>
