--- a/src/main/webapp/WEB-INF/templates/home/404.html
+++ b/src/main/webapp/WEB-INF/templates/home/404.html
@@ -15,6 +15,11 @@
     </div>
     <canvas id="canvas2d"></canvas>
 </div>
+<div class="footer" style="margin-top: 10px; background:white;">
+    <p style="text-align:center;">
+        <a href="https://beian.miit.gov.cn" style="color: #000" target="_blank">蜀ICP备2021022255号-2</a>
+    </p>
+</div>
 <script type="text/javascript" src="/static/404/404.js"></script>
 <!-- 代码 结束 -->
 </body>
