--- a/src/main/webapp/WEB-INF/templates/home/collect_list.html
+++ b/src/main/webapp/WEB-INF/templates/home/collect_list.html
@@ -130,6 +130,11 @@
         </div>
     </div>
 </div>
+<div class="footer" style="margin-top: 10px; background:white;">
+    <p style="text-align:center;">
+        <a href="https://beian.miit.gov.cn" style="color: #000" target="_blank">蜀ICP备2021022255号-2</a>
+    </p>
+</div>
 <script th:src="@{/static/base/js/script.js}"></script>
 <script th:src="@{/static/layer/layer.js}"></script>
 <script>
