--- a/src/main/webapp/WEB-INF/templates/home/index.html
+++ b/src/main/webapp/WEB-INF/templates/home/index.html
@@ -95,7 +95,8 @@
                                                     <div class="slider_inner">
                                                         <div class="txt1"><span>欢迎来到</span></div>
                                                         <div class="txt2"><span>e起去旅行</span></div>
-                                                        <div class="txt3"><span>e起去旅行为您提供最全的景区介绍、最优的旅游路线、最后的旅游服务.</span>
+                                                        <div class="txt3">
+                                                            <span>e起去旅行为您提供最全的景区介绍、最优的旅游路线、最后的旅游服务.</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -105,7 +106,8 @@
                                                     <div class="slider_inner">
                                                         <div class="txt1"><span>范围覆盖</span></div>
                                                         <div class="txt2"><span>全国景区</span></div>
-                                                        <div class="txt3"><span>从海南到东北，伴你走过东南西北.</span></div>
+                                                        <div class="txt3"><span>从海南到东北，伴你走过东南西北.</span>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </li>
@@ -114,7 +116,8 @@
                                                     <div class="slider_inner">
                                                         <div class="txt1"><span>海量数据</span></div>
                                                         <div class="txt2"><span>精彩游记</span></div>
-                                                        <div class="txt3"><span>分享最实用的旅游攻略，结交爱旅游的朋友</span></div>
+                                                        <div class="txt3">
+                                                            <span>分享最实用的旅游攻略，结交爱旅游的朋友</span></div>
                                                     </div>
                                                 </div>
                                             </li>
@@ -266,6 +269,11 @@
             </div>
         </div>
     </div>
+</div>
+<div class="footer" style="margin-top: 10px; background:white;">
+    <p style="text-align:center;">
+        <a href="https://beian.miit.gov.cn" style="color: #000" target="_blank">蜀ICP备2021022255号-2</a>
+    </p>
 </div>
 <script src="/static/base/js/script.js"></script>
 </body>
