优化管理站点数据分页

--- a/src/main/webapp/WEB-INF/templates/admin/area/area_list.html
+++ b/src/main/webapp/WEB-INF/templates/admin/area/area_list.html
@@ -256,7 +256,7 @@
                                     <th>添加时间</th>
                                     <th>操作事项</th>
                                 </tr>
-                                <tr th:each="area: ${areaList}">
+                                <tr th:each="area: ${data}">
                                     <td th:text="${area.id}"></td>
                                     <td th:text="${area.name}"></td>
                                     <td th:text="*{area.recommended ? '是' : '否'}"></td>
@@ -274,11 +274,32 @@
                         </div>
                         <div class="box-footer clearfix">
                             <ul class="pagination pagination-sm no-margin pull-right">
-                                <li><a href="/admin/area/list?page=1">首页</a></li>
-                                <li class="disabled"><a href="#">上一页</a></li>
-                                <li class="active"><a href="#">1</a></li>
-                                <li class="disabled"><a href="#">下一页</a></li>
-                                <li><a href="/admin/area/list?page=1">尾页</a></li>
+                                <li><a th:href="@{'/admin/area/list?page=1&size=' + ${pageSize}}">首页</a></li>
+
+                                <li th:if="${#strings.equals(currentPage, 1)}" class="disabled">
+                                    <a>上一页</a>
+                                </li>
+                                <li th:unless="${#strings.equals(currentPage, 1)}">
+                                    <a th:href="@{'/admin/area/list?page=' + ${currentPage - 1} + '&size=' + ${pageSize}}">上一页</a>
+                                </li>
+
+                                <th:block th:each="page:${#numbers.sequence(1, totalPage)}">
+                                    <li th:if="${#strings.equals(page, currentPage)}"  class="active">
+                                        <a th:text="${page}"></a>
+                                    </li>
+                                    <li th:unless="${#strings.equals(page, currentPage)}">
+                                        <a th:href="@{'/admin/area/list?page=' + ${page} + '&size=' + ${pageSize}}" th:text="${page}"></a>
+                                    </li>
+                                </th:block>
+
+                                <li th:if="${#strings.equals(currentPage, totalPage)}" class="disabled">
+                                    <a>下一页</a>
+                                </li>
+                                <li th:unless="${#strings.equals(currentPage, totalPage)}">
+                                    <a th:href="@{'/admin/area/list?page=' + ${currentPage + 1}} + '&size=' + ${pageSize}">下一页</a>
+                                </li>
+
+                                <li><a th:href="@{'/admin/area/list?page=' + ${totalPage} + '&size=' + ${pageSize}}">尾页</a></li>
                             </ul>
                         </div>
                     </div>
