优化移动端顶部显示问题

--- a/src/main/webapp/WEB-INF/templates/home/about.html
+++ b/src/main/webapp/WEB-INF/templates/home/about.html
@@ -161,7 +161,7 @@
       <a href="https://beian.miit.gov.cn" style="color: #000" target="_blank">蜀ICP备2021022255号-2</a>
     </p>
   </div>
-  <script src="/static/base/js/script.js"></script>
+  <script src="/static/base/js/bootstrap.js"></script>
 </body>
 
 </html>
