--- a/src/main/webapp/WEB-INF/templates/home/search.html
+++ b/src/main/webapp/WEB-INF/templates/home/search.html
@@ -182,7 +182,7 @@
         <a href="https://beian.miit.gov.cn" target="_blank"  style="color: #000">蜀ICP备2021022255号-2</a>
     </p>
 </div>
-<script th:src="@{/static/base/js/script.js}"></script>
+<script th:src="@{/static/base/js/bootstrap.js}"></script>
 
 </body>
 
