--- a/src/main/webapp/WEB-INF/templates/home/collect_list.html
+++ b/src/main/webapp/WEB-INF/templates/home/collect_list.html
@@ -135,7 +135,7 @@
         <a href="https://beian.miit.gov.cn" style="color: #000" target="_blank">蜀ICP备2021022255号-2</a>
     </p>
 </div>
-<script th:src="@{/static/base/js/script.js}"></script>
+<script th:src="@{/static/base/js/bootstrap.js}"></script>
 <script th:src="@{/static/layer/layer.js}"></script>
 <script>
 $(document).ready(function () {
