--- a/src/main/webapp/WEB-INF/templates/home/index.html
+++ b/src/main/webapp/WEB-INF/templates/home/index.html
@@ -275,6 +275,6 @@
         <a href="https://beian.miit.gov.cn" style="color: #000" target="_blank">蜀ICP备2021022255号-2</a>
     </p>
 </div>
-<script src="/static/base/js/script.js"></script>
+<script src="/static/base/js/bootstrap.min.js"></script>
 </body>
 </html>
