对QQ登录支持

--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -58,6 +58,9 @@
             </form>
             <div>
                 <p class="change-form">还没有账号?去 <a href="\register\" class="">注册</a></p>
+                <a href="https://graph.qq.com/oauth2.0/authorize?response_type=code&client_id=102019868&redirect_uri=http://mxzero.top/oauth2/qq_fallback&state=/auth">
+                    <img src="https://wiki.connect.qq.com/wp-content/uploads/2021/01/bt_blue_76X24.png" alt="QQ登录">
+                </a>
             </div>
         </div>
     </div>
