--- a/src/main/webapp/WEB-INF/templates/loginv2.html
+++ b/src/main/webapp/WEB-INF/templates/loginv2.html
@@ -19,7 +19,7 @@
   <script>
     document.getElementById("accessAdmin").onclick = function () {
       let xhr = new XMLHttpRequest()
-      xhr.open("GET", "http://localhost/admin/api/test")
+      xhr.open("GET", "/admin/api/test")
       xhr.setRequestHeader("content-type", "application/json")
       xhr.send()
       xhr.onreadystatechange = function () {
@@ -32,7 +32,7 @@
 
     document.getElementById("logout").onclick = function () {
       let xhr = new XMLHttpRequest()
-      xhr.open("GET", "http://localhost/logout")
+      xhr.open("GET", "/logout")
       xhr.setRequestHeader("content-type", "application/json")
       xhr.send()
       xhr.onreadystatechange = function () {
@@ -49,7 +49,7 @@
       let password = document.getElementById("password").value
 
       let xhr = new XMLHttpRequest()
-      xhr.open("POST", "http://localhost/login")
+      xhr.open("POST", "/login")
       xhr.setRequestHeader("content-type", "application/json")
       xhr.send(JSON.stringify({ username, password }))
       xhr.onreadystatechange = function () {
